# fh

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  GCS_SECURITY_SETUP.md  GOOGLE_MAPS_API_FIX.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SMS_AUTH_SETUP.md  dev.yml  logging.ini  prod.yml  pyproject.toml
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  mcp_chat.py  pyproject.toml  requirements-mcp-chat.txt  routes_list.py  test_mcp_chat.py
backend/alembic/: env.py
backend/alembic/versions/: 27242f9f9125_add_status_column_to_charges_table.py  3ffe7c7ab5aa_add_equipment_table_simple.py  4b664026d623_increase_lat_lng_precision.py  5573f32dcfec_add_device_registration_tokens_table.py  6d9b10f1af55_merge_device_migrations.py  6ff3e5484e81_add_description_to_booking_statuses.py  893c0ec376a4_add_device_id_to_bookings.py  9670e70a2625_add_refund_reason_column_to_charges.py  9ec267fcf27f_add_timestamps_to_operating_hours.py  9ec664360e72_add_timestamps_to_room_prices.py  a257eb162ffb_make_user_role_nullable.py  a3d9caea02c9_add_devices_tables.py  add_name_and_role_to_users.py  b74a45b320b3_add_timestamps_to_badges.py  c1a2b3d4e5f6_add_device_unlock_sessions.py  d7e8f9a0b1c2_add_support_tickets_table.py  eacb67ee0634_add_name_description_cover_photo_is_.py  joo25m3rkhhl_add_device_password_rotation_fields.py
backend/locker/: README.md
backend/requirements/: base.txt  dev.txt
backend/scripts/: list_routes.py
backend/src/: config.py  database.py  exceptions.py  gcs_utils.py  main.py  models.py  storage.py
backend/src/addresses/: dependencies.py  laravel_endpoints.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/src/admin/: __init__.py  auth.py  views.py
backend/src/auth/: dependencies.py  models.py  models_fastapi_users.py  router.py  schemas.py  service.py  sms_router.py  sms_schemas.py  sms_service.py
backend/src/badges/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/bookings/: booking_management_service.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/companies/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/db/: seed.py
backend/src/db/seeders/: badge_seeder.py  booking_status_seeder.py  operating_mode_seeder.py  role_seeder.py
backend/src/devices/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/geographic/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/mcp/: __init__.py  server.py
backend/src/menu/: __init__.py  router.py
backend/src/messages/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/my_studios/: __init__.py  dependencies.py  repository.py  router.py  schemas.py  service.py
backend/src/operating_hours/: __init__.py  dependencies.py  repository.py  router.py  schemas.py  service.py
backend/src/payments/: models.py  router.py  schemas.py  service.py
backend/src/photos/: __init__.py  router.py  schemas.py  service.py
backend/src/rooms/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/support/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/tasks/: booking.py  celery_app.py  email.py
backend/src/teams/: __init__.py  router.py  schemas.py  service.py
backend/src/users/: repository.py  router.py  schemas.py  service.py
backend/src/webhooks/: router.py
backend/templates/emails/: booking_cancelled.html  booking_confirmation_owner.html  booking_confirmed.html  booking_expired.html  reset_password.html  stripe_verified.html  verify_email.html  welcome.html  welcome_owner.html
caddy/: Caddyfile  Caddyfile.prod
(+117 files in other folders)
